<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseTeam">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="171dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#2068db"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_orange"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/join_team"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="180dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/join_team"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_orange"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/bg_orange"
            android:gravity="center"
            android:text="@string/orange"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name" />

        <Button
            android:id="@+id/btn_blue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/bg_blue"
            android:gravity="center"
            android:text="@string/blue"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_orange" />

        <Button
            android:id="@+id/btn_red"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="27dp"
            android:background="@drawable/bg_red"
            android:gravity="center"
            android:text="@string/red"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_blue" />

        <Button
            android:id="@+id/btn_yellow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="88dp"
            android:background="@drawable/bg_yellow"
            android:gravity="center"
            android:text="@string/yellow"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_red" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.LinearLayoutCompat>